@@ -1,3 +1,7 @@
+2011-11-08 Sarka Todorova <sarka.todorova@cern.ch>
+	* suppress (unused) MsgStream instantiations
+	* tagged as MuonTrackingGeometry-00-05-42 
+
 2011-10-11 Sarka Todorova <sarka.todorova@cern.ch>
 	* suppress printout in inert material build-up (a problem in conical volume,
 	* conical surfaces now available, update required  )
